--- a/notebooks/2_dehydrate-tweetids.ipynb
+++ b/notebooks/2_dehydrate-tweetids.ipynb
@@ -54,7 +54,8 @@
     "ExecuteTime": {
      "end_time": "2020-06-02T17:49:34.977112Z",
      "start_time": "2020-06-02T17:49:34.971912Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -134,6 +135,28 @@
     "\n",
     "        print('{} requested, {} collected so far'.format(requested, collected))\n",
     "'''\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Downloading data from public server"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I also uploaded this dataset to Zenodo.\n",
+    "\n",
+    "You can use [this link](http://doi.org/10.5281/zenodo.3900655) to access the file.\n",
+    "\n",
+    "`\n",
+    "Onur Varol. (2020). SICSS - Tutorial Dataset File (Version v1.0.0) [Data set]. Zenodo. http://doi.org/10.5281/zenodo.3900655\n",
+    "`"
    ]
   },
   {
